@@ -23,7 +23,8 @@ class V2World {
 		void				convertArmies(EU3World sourceWorld, provinceMapping provinceMap);
 	private:
 		V2Province*			getProvinceForExpeditionaryArmy(const V2Country& country);
-		bool				addRegimentToArmy(V2Army* army, RegimentCategory category, const inverseProvinceMapping& inverseProvinceMap, V2Country& country);
+		vector<int>			getPortProvinces(vector<int> provinces);
+		int					addRegimentToArmy(V2Army* army, RegimentCategory category, const inverseProvinceMapping& inverseProvinceMap, V2Country& country);
 		vector<V2Province>	provinces;
 		vector<V2Country>		countries;
 		vector<V2Country>		potentialCountries;
